# SciQLop

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  README.md  SciQLop.spec  SciQlopConsoleSh.bat  SciQlopEnv.bat  meson.build  meson_options.txt  org.LPP.SciQLop.json  pyproject.toml  qtc-helpers.py  requirements.txt  requirements_dev.txt  setup.cfg  sonar-project.properties
app/: CMakeLists.txt  meson.build
app/PySide-bindings/: PyDataProvider.h  bindings.xml  gen_main.py  main.py.in  meson.build  numpy_wrappers.h  shiboken-helper.py  src_list.py
app/PySide-bindings/SciQLopBindings/: meson.build
app/PySide-bindings/plugins/: Demo-virtual-product.py  SPWC-Amda.py  TestPlugin.py
app/PySide2-bindings/: CMakeLists.txt  PyDataProvider.h  bindings.h  bindings.xml  main.cpp  main.py  meson.build  numpy_wrappers.cpp  numpy_wrappers.h  shiboken-helper.py
app/PySide2-bindings/SciQLopBindings/: meson.build
app/PySide2-bindings/plugins/: Demo-virtual-product.py  SPWC-Amda.py  TestPlugin.py  meson.build
app/include/: MainWindow.h  toolbar.h
app/resources/: SciQLOP.desktop  qlopapp.qrc  qlopapp.rc
app/src/: Main.cpp  MainWindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  toolbar.cpp
app/ui/: MainWindow.ui
app/vera-exclusions/: exclusions.txt
core/: CMakeLists.txt  meson.build
core/cmake/: Findsciqlop-core.cmake
core/include/: CoreGlobal.h
core/include/Catalogue/: CatalogueController.h
core/include/Common/: DateUtils.h  MetaTypes.h  MimeTypesDef.h  Numeric.h  SignalWaiter.h  SortUtils.h  StringUtils.h  spimpl.h
core/include/Data/: AcquisitionDataPacket.h  AcquisitionRequest.h  ArrayData.h  ArrayDataIterator.h  DataProviderParameters.h  DataSeries.h  DataSeriesIterator.h  DataSeriesMergeHelper.h  DataSeriesType.h  DataSeriesUtils.h  IDataProvider.h  IDataSeries.h  OptionalAxis.h  ScalarSeries.h  SpectrogramSeries.h  SqpDateTime.h  SqpIterator.h  SqpRange.h  Unit.h  VariableRequest.h  VectorSeries.h
core/include/DataSource/: DataSourceController.h  DataSourceItem.h  DataSourceItemAction.h  DataSourceItemMergeHelper.h
core/include/Network/: Downloader.h  NetworkController.h  Response.h
core/include/Plugin/: IPlugin.h  PluginManager.h
core/include/PluginManager/: PluginManager.h
core/include/Settings/: ISqpSettingsBindable.h  SqpSettingsDefs.h
core/include/Time/: TimeController.h
core/include/Variable/: Variable.h  VariableAcquisitionWorker.h  VariableCacheController.h  VariableCacheStrategy.h  VariableCacheStrategyFactory.h  VariableController.h  VariableController2.h  VariableModel.h  VariableSingleThresholdCacheStrategy.h  VariableSynchronizationGroup.h
core/include/Visualization/: VisualizationController.h
core/resources/: Version.cpp.in
core/src/Catalogue/: CatalogueController.cpp
core/src/Common/: DateUtils.cpp  MimeTypesDef.cpp  SignalWaiter.cpp  StringUtils.cpp
core/src/Data/: ArrayDataIterator.cpp  DataSeriesIterator.cpp  DataSeriesUtils.cpp  OptionalAxis.cpp  ScalarSeries.cpp  SpectrogramSeries.cpp  VectorSeries.cpp
core/src/DataSource/: DataSourceController.cpp  DataSourceItem.cpp  DataSourceItemAction.cpp  DataSourceItemMergeHelper.cpp
core/src/Network/: Downloader.cpp  NetworkController.cpp
core/src/Plugin/: PluginManager.cpp
core/src/PluginManager/: PluginManager.cpp
core/src/Settings/: SqpSettingsDefs.cpp
core/src/Time/: TimeController.cpp
core/src/Variable/: Variable.cpp  VariableAcquisitionWorker.cpp  VariableCacheController.cpp  VariableCacheStrategy.cpp  VariableController.cpp  VariableController2.cpp  VariableModel.cpp  VariableSynchronizationGroup.cpp
core/tests/: CMakeLists.txt  meson.build
core/vera-exclusions/: exclusions.txt
docs/: CMakeLists.txt  Doxyfile.dox.in  index.md.in  qt-lifetime-patterns.md  workspaces-and-uv.md
docs/plans/: 2026-03-03-catalog-path-attribute-design.md  2026-03-03-catalog-path-implementation.md  2026-03-03-catalog-provider-api-design.md  2026-03-03-catalog-provider-implementation.md  2026-03-04-catalog-next-steps-design.md  2026-03-04-catalog-next-steps-implementation.md  2026-03-04-plot-integration-design.md  2026-03-04-plot-integration-implementation.md  2026-03-05-catalog-jump-mode-design.md  2026-03-05-catalog-jump-mode-implementation.md  2026-03-05-uv-environment-management-design.md  2026-03-05-uv-environment-management-implementation.md  2026-03-07-catalog-cleanup.md  2026-03-07-catalog-deferred-save-design.md  2026-03-07-catalog-deferred-save-implementation.md  2026-03-08-core-cleanup.md  2026-03-08-welcome-panel-appstore.md  2026-03-08-welcome-panel-improvements.md  2026-03-08-welcome-panel-review.md  2026-03-09-jupyter-integration-improvements.md  2026-03-11-example-into-workspace-plan.md  2026-03-11-example-into-workspace.md  2026-03-11-inline-catalog-editing.md  2026-03-11-welcome-page-webengine-migration.md  2026-03-11-welcome-redesign-and-appstore-design.md  2026-03-11-welcome-redesign-and-appstore-plan.md  2026-03-11-workspace-sciqlop-migration.md  2026-04-30-event-metadata-edition.md  2026-05-03-code-review-backlog.md  2026-05-05-graph-context-metadata-plan.md  2026-05-05-graph-context-metadata.md  2026-05-06-handover-tracing-and-graph-context.md  2026-05-09-snippet-templates-refactor.md  2026-05-10-event-dnd-and-orphan-cleanup.md
docs/screenshots/: README.md  conftest.py
gui/: CMakeLists.txt  meson.build
gui/cmake/: Findsciqlop-gui.cmake
gui/include/: DragDropHelper.h  SqpApplication.h
gui/resources/: sqpguiresources.qrc
gui/src/: DragDropHelper.cpp  SqpApplication.cpp
gui/tests/: CMakeLists.txt  meson.build
gui/vera-exclusions/: exclusions.txt
plugin/: CMakeLists.txt
plugin/cmake/: Findsciqlop-plugin.cmake
plugins/amda/: CMakeLists.txt  meson.build
plugins/demo_plugin/: DataSource.cpp  DataSource.hpp  DemoPlugin.cpp  DemoPlugin.hpp  DemoPlugin.json  meson.build
plugins/generic_ws/: CMakeLists.txt
plugins/mockplugin/: CMakeLists.txt  meson.build
plugins/python_providers/: CMakeLists.txt  meson.build
sqpapp/: CMakeLists.txt
sqpapp/src/: main.cpp  mainwindow.cpp
(+1125 files in other folders)
