[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["SciQLop"]

[project]
name = "SciQLop"
version = "0.11.1"
description = "An ergonomic and efficient application to browse and label in situ plasma measurements from multi-mission satellite data."
keywords = ["machine-learning", "satellite", "plasma-physics", "nasa-data", "amda", "cdpp"]
authors = [
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

maintainers = [
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

requires-python = ">=3.11,<3.15"
license = { file = "COPYING" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "SciQLopPlots==0.21.0",
    "speasy>=1.6.1",
    "qtconsole",
    "humanize",
    "platformdirs",
    "seaborn",
    "scipy",
    "pyside6==6.10.2",
    "shiboken6==6.10.2",
    "PySide6-QtAds==4.5.0.2",
    "ipython",
    "jupyqt>=0.5.0",
    "matplotlib==3.10.8",
    "qasync",
    "jinja2",
    "pyzstd",
    "PyGitHub",
    "numpy",
    "expression",
    "pydantic",
    "keyring",
    "uv",
    "tomli_w",
    "pyyaml",
    "psutil"
]
[project.urls]
homepage = "https://github.com/SciQLop/SciQLop"
bug_tracker = "https://github.com/SciQLop/SciQLop/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "hypothesis",
    'pytest-xvfb; platform_system == "Linux"',
]

[project.gui-scripts]
sciqlop = "SciQLop.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
xvfb_width = 2560
xvfb_height = 1440
xvfb_xauth = true
