[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["SciQLop"]

[project]
name = "SciQLop"
version = "0.11.2"
description = "An ergonomic and efficient application to browse and label in situ plasma measurements from multi-mission satellite data."
keywords = ["machine-learning", "satellite", "plasma-physics", "nasa-data", "amda", "cdpp"]
authors = [
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

maintainers = [
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

requires-python = ">=3.11,<3.15"
license = { file = "COPYING" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "SciQLopPlots==0.21.0",
    "speasy>=1.6.1",
    "qtconsole",
    "humanize",
    "platformdirs",
    "seaborn",
    "scipy",
    "pyside6==6.10.2",
    "shiboken6==6.10.2",
    "PySide6-QtAds==4.5.0.2",
    "ipython",
    "jupyqt>=0.5.2",
    "matplotlib==3.10.8",
    "qasync",
    "jinja2",
    "pyzstd",
    "PyGitHub",
    "numpy",
    "expression",
    "pydantic",
    "keyring",
    "uv",
    "tomli_w",
    "pyyaml",
    "psutil"
]
[project.urls]
homepage = "https://github.com/SciQLop/SciQLop"
bug_tracker = "https://github.com/SciQLop/SciQLop/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "hypothesis",
    'pytest-xvfb; platform_system == "Linux"',
]

[project.gui-scripts]
sciqlop = "SciQLop.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
xvfb_width = 2560
xvfb_height = 1440
xvfb_xauth = true

[tool.bumpversion]
current_version = "0.11.2"
commit = true
tag = false
allow_dirty = false
message = "Bump version: {current_version} → {new_version}"
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
# PEP 440 dev-release scheme. The optional `.dev<N>` suffix marks unreleased
# development builds; bumping the `release` part to its optional value drops
# the suffix and produces a final release.
parse = """(?x)
    (?P<major>\\d+)\\.
    (?P<minor>\\d+)\\.
    (?P<patch>\\d+)
    (?:
        \\.(?P<release>dev)
        (?P<build>\\d+)
    )?
"""
serialize = [
    "{major}.{minor}.{patch}.{release}{build}",
    "{major}.{minor}.{patch}",
]

# Workflow:
#   - Right after releasing 0.11.2, run:
#       bump-my-version bump minor   # → 0.12.0.dev0 (commit, no tag)
#   - Iterate during development:
#       bump-my-version bump build   # → 0.12.0.dev1, .dev2, ...
#   - At release time:
#       bump-my-version bump release          # → 0.12.0 (commit)
#       git tag -a v0.12.0 -m "Release v0.12.0"
#       git push jeandet main v0.12.0
#   `tag = false` globally so iterative dev bumps don't accidentally create
#   throwaway tags; release tags are created manually (one extra command, but
#   unambiguous).

[tool.bumpversion.parts.release]
values = ["dev", "final"]
optional_value = "final"

[tool.bumpversion.parts.build]
first_value = "0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
